rename geographic endpoint
